--- a/po/R-Matrix.pot
+++ b/po/R-Matrix.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Matrix 1.1-1\n"
-"POT-Creation-Date: 2013-12-23 21:27\n"
+"Project-Id-Version: Matrix 1.1-3\n"
+"POT-Creation-Date: 2014-03-26 21:03\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,6 +92,9 @@ msgid "i1[1] == 0 ==> C-level verbosity will not happen!"
 msgstr ""
 
 msgid "using\t \"old code\" part in  Csparse subassignment"
+msgstr ""
+
+msgid "using\"old code\" part in Csparse subassignment\n >>> please report to Matrix-authors@r-project.org"
 msgstr ""
 
 msgid "Cholesky(<nsparse...>) -> *symbolic* factorization -- not yet implemented"
@@ -193,6 +196,9 @@ msgstr ""
 msgid "programming error: min() should have dispatched w/ 1st arg much earlier"
 msgstr ""
 
+msgid "in Summary(<ANY>, .): %s(<%s>, <%s>,...)"
+msgstr ""
+
 msgid "invalid or not-yet-implemented 'Matrix' subsetting"
 msgstr ""
 
@@ -277,10 +283,7 @@ msgstr ""
 msgid "%s %s <Matrix> is undefined"
 msgstr ""
 
-msgid "longer object length"
-msgstr ""
-
-msgid "is not a multiple of shorter object length"
+msgid "longer object length is not a multiple of shorter object length"
 msgstr ""
 
 msgid "dim [product %d] do not match the length of object [%d]"
